Correcciones de la PrimeraEntrega+CristianRuiz

--- a/src/componentes/ItemListContainer.scss
+++ b/src/componentes/ItemListContainer.scss
@@ -1,11 +1,12 @@
 .ItemList {
-    color: black;
     background-color: #8b8d92;
     text-align: center;
     padding: 40px;
+    color: white;
 }
 
 .ListContainer {
     text-align: center;
-
+    color: white;
 }
+
