--- a/src/componentes/NavBar/NavBar.scss
+++ b/src/componentes/NavBar/NavBar.scss
@@ -2,8 +2,9 @@
     align-items: center;
     align-content: center;
     z-index: 10;
-    padding: 15px 15px 15px 15px;
+    padding: 5px 5px 5px 5px;
     height: 90px;
+    width: 120px;
 }
 
 .navbar {
