--- a/src/componentes/Item/Item.scss
+++ b/src/componentes/Item/Item.scss
@@ -7,51 +7,48 @@
 }
 
 .productos__precio {
-  margin: 5px 0;
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: bold;
+  color: rgb(23, 64, 161); 
   
 }
 
 
-   /*------- Seteo de la Imagen de Producto-------*/
    .imagProduc {
-    width: 190px; 
-    height: auto;
-    margin-top: 10px; 
-    
+    width: 80%; 
+    padding: 10px;
 }
 
 .productCard {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  flex-direction: column; /* Elementos apilados verticalmente */
-  align-items: center; /* Centra los elementos horizontalmente */
+  flex-direction: column; 
+  align-items: center; 
   color: black;
   border-radius: 16px;
   overflow: hidden;
   width: 300px;
-  transition: all 0.5s;
   background: #ffffff;
   border: 2px dotted #b0b0b0;
 }
 
 .productCard:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: scale(1.35);
+  box-shadow: 0 4px 8px 0 rgba(186, 227, 22, 0.2);
 }
 
 .link {
   text-decoration: none;
   color: white; 
   font-weight: bold;
-  font-size: 1.1em;
+  font-size: 1.05em;
   margin-bottom: 20px;
   background-color: black;
   width: 150px;
   height: 30px;
   text-align: center;
+  border-radius: 10px;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 
 }
