--- a/src/componentes/ItemDetail/ItemDetail.scss
+++ b/src/componentes/ItemDetail/ItemDetail.scss
@@ -1,5 +1,8 @@
 .item-detail {
-  padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
 }
 
 .item-detail{
@@ -8,7 +11,7 @@
   }
   
   .item-detail .imagen{
-    width: 40%;
+    width: 25%;
     
   }
   
@@ -17,4 +20,6 @@
     padding: 10px 50px;
     display: flex;
     flex-direction: column;
+    font-size: 30px;
+    
   }
