--- a/src/componentes/Item/Item.scss
+++ b/src/componentes/Item/Item.scss
@@ -1,30 +1,40 @@
-
 .productos__h2 {
   font-size: 22px;
   text-align: center;
   text-shadow: 1px 1px rgb(255, 255, 255), -5px 0 10px rgb(41, 41, 41);
   padding: 10px;
+  margin: 0;
+
+}
+
+.productos__stock {
+  font-size: 18px;
+  text-align: center;
+  text-shadow: 0.5px 0.5px rgb(255, 255, 255), -0.5px 0 5px rgb(41, 41, 41);
+  padding: 3px;
+  margin: 10px;
 }
 
 .productos__precio {
   font-size: 1.6em;
   font-weight: bold;
-  color: rgb(23, 64, 161); 
-  
+  margin: 0;
+  color: rgb(23, 64, 161);
+
 }
 
 
-   .imagProduc {
-    width: 80%; 
-    padding: 10px;
+.imagProduc {
+  width: 80%;
+  padding: 10px;
 }
 
 .productCard {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  flex-direction: column; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   color: black;
   border-radius: 16px;
   overflow: hidden;
@@ -39,7 +49,7 @@
 
 .link {
   text-decoration: none;
-  color: white; 
+  color: white;
   font-weight: bold;
   font-size: 1.05em;
   margin-bottom: 20px;
@@ -48,7 +58,7 @@
   height: 30px;
   text-align: center;
   border-radius: 10px;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 
 }
