--- a/src/componentes/Item/Item.scss
+++ b/src/componentes/Item/Item.scss
@@ -10,13 +10,13 @@
 .productos__stock {
   font-size: 18px;
   text-align: center;
-  text-shadow: 0.5px 0.5px rgb(255, 255, 255), -0.5px 0 5px rgb(41, 41, 41);
+  text-shadow: 0.5px 0.5px rgb(255, 255, 255), -0.5px 0 5px rgb(0, 255, 255);
   padding: 3px;
   margin: 10px;
 }
 
 .productos__precio {
-  font-size: 1.6em;
+  font-size: 1.5em;
   font-weight: bold;
   margin: 0;
   color: rgb(23, 64, 161);
@@ -41,24 +41,34 @@
   width: 300px;
   background: #ffffff;
   border: 2px dotted #b0b0b0;
+  margin: 10px;
+  padding: 5px;
 }
 
 .productCard:hover {
-  box-shadow: 0 4px 8px 0 rgba(186, 227, 22, 0.2);
+  box-shadow: 0 4px 4px 0 rgba(186, 227, 22, 0.2);
 }
 
-.link {
-  text-decoration: none;
+.buttons-i {
+  font-size: .7em;
   color: white;
+  width: 100%;
+  border-radius: 8px;
+  background:  #404042;    
+  cursor:pointer;
   font-weight: bold;
-  font-size: 1.05em;
-  margin-bottom: 20px;
-  background-color: black;
-  width: 150px;
-  height: 30px;
+  padding: .6em;
   text-align: center;
-  border-radius: 10px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-
+}
+.buttons-i:hover {
+  font-size: .7em;
+  color: #404042;
+  width: 100%;
+  border-radius: 8px;
+  background:  #ffa500;    
+  cursor:pointer;
+  font-weight: bold;
+  padding: .6em;
+  text-align: center;
+  border: 1px dotted black;
 }
