--- a/src/componentes/NavBar/CartWidget.scss
+++ b/src/componentes/NavBar/CartWidget.scss
@@ -3,13 +3,20 @@
     display: flex;
     
     img {
-        width: 30px;
-        width: 30px;
-    }
-
-    p {
-        font-size: 1em;
+        width: 35px;
+        height: 35px;
     }
 
     
+    
+}
+
+.p-count {
+    color: white;
+    font-size: 1.1em;
+    padding: 0 0 0 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+
+
 }
