--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -27,7 +27,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
     margin-bottom: 5px;
     width: 100%;
     text-align: center;
@@ -49,14 +48,13 @@
     align-items: center;
     color: #404042;
     font-size: .9em;
-
 }
 
 .cantidad {
     display: flex;
     flex-direction: row-reverse;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-align: center;
 }
 
@@ -66,25 +64,23 @@
     width: 30px;
     align-items: center;
     justify-items: center;
-
 }
 
 .buttons {
-    font-size: .9em;
+    font-size: 1.1em;
     color: white;
     width: 300px;
     height: 50px;
-    margin: 30px;
     border-radius: 8px;
     background:  #404042;    
     cursor:pointer;
     font-weight: bold;
     padding: .6em;
     text-align: center;
-
 }
+
 .buttons:hover {
-    font-size: .9em;
+    font-size: 1.1em;
     color: #404042;
     width: 300px;
     border-radius: 8px;
@@ -93,7 +89,30 @@
     font-weight: bold;
     padding: .6em;
     text-align: center;
+}
 
+.carritovacio {
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #393646;
+    border-radius: 20px;
+    box-shadow: 3px 3px 6px #777777, -3px -3px 6px #ffffff;
+    width: auto;
+    height: 18vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 100px 100px;
+    color: #ffa500;
+}
+
+.carritovacio h2 {
+    padding: 30px;
+    color: white; 
 }
 
 
+.totalprecio {
+    color: white;
+    padding: 10px;
+}
