Se incorporo el componente Footer, se mejoro la visualizacion del Carrito, se quito el UL y se puso Tablas, se incorporo Firebase al proyecto

--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -1,5 +1,4 @@
-#carritoContainer{
-    border: 1px solid #ccc;
+#carritocontainer{
     padding: 10px;
     background-color: #393646;
     border-radius: 20px;
@@ -9,10 +8,12 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    margin: 40px 100px 0 100px;
+    margin: 100px 200px;
+    font-size: 1.05em;
+    padding: 50px;
+
 }
-.carritoContainer{
-    border: 1px solid #ccc;
+.carritocontainer{
     padding: 10px;
     background-color: #404042;
     box-shadow: 3px 3px 6px #777777, -3px -3px 6px #ffffff;
@@ -21,9 +22,10 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    
 }
 
-.carritoItem {
+.carritoitem {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -38,7 +40,7 @@
 }
 
 
-.carritoItem p {
+.carritoitem p {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -116,3 +118,51 @@
     color: white;
     padding: 10px;
 }
+
+//Diseño Carrito
+
+.carrito-table {
+    width: 100%;
+    border-collapse: separate; 
+    border-spacing: 0 10px; 
+    font-weight: bold;
+    
+
+  }
+  
+  .carrito-table th, .carrito-table td {
+    border-bottom: 1px solid #ddd;
+    padding: 8px;
+    background-color: white;
+    
+  }
+  
+  .carrito-table th {
+    background-color: #393646;
+    color: white;    text-align: left;
+    text-align: center;
+    
+    
+
+  }
+  
+  .carrito-table td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    
+
+  }
+  
+  .carrito-table td:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+  }
+  .carrito-table tr:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+  }
+  
+ 
+  
