--- a/src/componentes/Item/Item.scss
+++ b/src/componentes/Item/Item.scss
@@ -24,12 +24,12 @@
 }
 
 
-.imagProduc {
+.imagproduc {
   width: 80%;
   padding: 10px;
 }
 
-.productCard {
+.productcard {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -45,7 +45,7 @@
   padding: 5px;
 }
 
-.productCard:hover {
+.productcard:hover {
   box-shadow: 0 4px 4px 0 rgba(186, 227, 22, 0.2);
 }
 
