--- a/src/componentes/NavBar/NavBar.scss
+++ b/src/componentes/NavBar/NavBar.scss
@@ -1,8 +1,8 @@
-.ImagenLogo {
+.imagenlogo {
     align-items: center;
     align-content: center;
     z-index: 10;
-    padding: 5px 5px 5px 5px;
+    padding: 15px 15px 15px 15px;
     height: 90px;
     width: 120px;
 }
