--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -1,4 +1,4 @@
-#carritocontainer{
+#carritocontainer {
     padding: 10px;
     background-color: #393646;
     border-radius: 20px;
@@ -12,17 +12,6 @@
     font-size: 1.05em;
     padding: 50px;
 
-}
-.carritocontainer{
-    padding: 10px;
-    background-color: #404042;
-    box-shadow: 3px 3px 6px #777777, -3px -3px 6px #ffffff;
-    width: auto;
-    height: auto;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    
 }
 
 .carritoitem {
@@ -46,7 +35,7 @@
     flex-wrap: wrap;
     margin: 0px;
     text-decoration: none;
-    text-align:justify;
+    text-align: justify;
     align-items: center;
     color: #404042;
     font-size: .9em;
@@ -63,9 +52,14 @@
 .button-trash {
     background-color: transparent;
     border: none;
-    width: 30px;
+    width: 35px;
     align-items: center;
     justify-items: center;
+    cursor: pointer;
+}
+.button-trash:hover {
+color: red;
+background-color: transparent;
 }
 
 .buttons {
@@ -74,8 +68,8 @@
     width: 300px;
     height: 50px;
     border-radius: 8px;
-    background:  #404042;    
-    cursor:pointer;
+    background: #404042;
+    cursor: pointer;
     font-weight: bold;
     padding: .6em;
     text-align: center;
@@ -86,8 +80,8 @@
     color: #404042;
     width: 300px;
     border-radius: 8px;
-    background:  #ffa500;    
-    cursor:pointer;
+    background: #ffa500;
+    cursor: pointer;
     font-weight: bold;
     padding: .6em;
     text-align: center;
@@ -110,7 +104,7 @@
 
 .carritovacio h2 {
     padding: 30px;
-    color: white; 
+    color: white;
 }
 
 
@@ -123,46 +117,41 @@
 
 .carrito-table {
     width: 100%;
-    border-collapse: separate; 
-    border-spacing: 0 10px; 
+    border-collapse: separate;
+    border-spacing: 0 10px;
     font-weight: bold;
-    
+}
 
-  }
-  
-  .carrito-table th, .carrito-table td {
+.carrito-table th,
+.carrito-table td {
     border-bottom: 1px solid #ddd;
     padding: 8px;
     background-color: white;
-    
-  }
-  
-  .carrito-table th {
-    background-color: #393646;
-    color: white;    text-align: left;
-    text-align: center;
-    
-    
 
-  }
-  
-  .carrito-table td:first-child {
+}
+
+.carrito-table th {
+    background-color: #393646;
+    color: white;
+    text-align: left;
+    text-align: center;
+}
+
+.carrito-table td:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    
 
-  }
-  
-  .carrito-table td:last-child {
+
+}
+
+.carrito-table td:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
-  }
-  .carrito-table tr:last-child {
+}
+
+.carrito-table tr:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    
-  }
-  
- 
-  
+
+}
