--- a/src/componentes/Item/Item.scss
+++ b/src/componentes/Item/Item.scss
@@ -1,4 +1,4 @@
-.productos__h2 {
+.productos__nombre {
   font-size: 22px;
   text-align: center;
   text-shadow: 1px 1px rgb(255, 255, 255), -5px 0 10px rgb(41, 41, 41);
@@ -22,7 +22,6 @@
   color: rgb(23, 64, 161);
 
 }
-
 
 .imagproduc {
   width: 80%;
@@ -54,19 +53,20 @@
   color: white;
   width: 100%;
   border-radius: 8px;
-  background:  #404042;    
-  cursor:pointer;
+  background: #404042;
+  cursor: pointer;
   font-weight: bold;
   padding: .6em;
   text-align: center;
 }
+
 .buttons-i:hover {
   font-size: .7em;
   color: #404042;
   width: 100%;
   border-radius: 8px;
-  background:  #ffa500;    
-  cursor:pointer;
+  background: #ffa500;
+  cursor: pointer;
   font-weight: bold;
   padding: .6em;
   text-align: center;
