--- a/src/componentes/NavBar/NavBar.scss
+++ b/src/componentes/NavBar/NavBar.scss
@@ -1,10 +1,5 @@
-.imagenlogo {
-    align-items: center;
-    align-content: center;
-    z-index: 10;
-    padding: 15px 15px 15px 15px;
-    height: 90px;
-    width: 120px;
+.img-pad {
+    padding: 15px;
 }
 
 .navbar {
@@ -17,7 +12,6 @@
     width: 100%;
     background-color: #393646;
     padding: 0 30px 0px 0
-    
 }
 
 ul {
@@ -31,8 +25,6 @@ ul {
         margin: 0 14px;
        color: white;
        font-size: 1.2rem;
-
-       
     }
     a {
         text-decoration: none;
