--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -73,6 +73,7 @@ background-color: transparent;
     font-weight: bold;
     padding: .6em;
     text-align: center;
+    margin: 10px;
 }
 
 .buttons:hover {
