--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -11,6 +11,7 @@
     margin: 100px 200px;
     font-size: 1.05em;
     padding: 50px;
+    
 
 }
 
@@ -86,6 +87,7 @@ background-color: transparent;
     font-weight: bold;
     padding: .6em;
     text-align: center;
+    border: 1px solid #ffa500;
 }
 
 .carritovacio {
