--- a/src/componentes/Checkout/Checkout.scss
+++ b/src/componentes/Checkout/Checkout.scss
@@ -20,3 +20,40 @@
 span {
     color: #ffa500;
 }
+
+.ident-pedido{ 
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    background-color: #8b8d92;
+    width: 800px;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 3px 3px 6px #777777, -3px -3px 6px #ffffff;
+
+    
+}
+
+.buttons-fin {
+    color: white;
+    width: 250px;
+    border-radius: 8px;
+    background: #404042;
+    cursor: pointer;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid #ffa500;
+
+}
+
+.buttons-fin:hover {
+    color: #404042;
+    width: 250px;
+    border-radius: 8px;
+    background: #ffa500;
+    cursor: pointer;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid #ffa500;
+
+}
