--- a/src/componentes/Footer/Footer.scss
+++ b/src/componentes/Footer/Footer.scss
@@ -4,7 +4,7 @@
     color: white;
     text-align: center;
     padding: 20px 0;
-    width: 100%;
+    width: auto;
     height: 100%;
 }
 
@@ -14,13 +14,11 @@
     align-items: center;
     flex-direction: column-reverse;
     margin-bottom: auto;
-
 }
 
 .footer-info {
     margin-top: 10px;
     margin-left: 30px;
-
 }
 
 .esp-li {
