--- a/src/componentes/ItemCount/ItemCount.scss
+++ b/src/componentes/ItemCount/ItemCount.scss
@@ -18,7 +18,7 @@
   
   .controles button{
     width: 50px;
-    height: 30px;
+    height: 50px;
     background-color: #393646;
     color: white;
     border-radius: 5px;
@@ -29,6 +29,10 @@
   button:hover{
     cursor: pointer;
     background-color: #c58e28;
+    color:#393646;
+    font-weight: bold;
+
+
 
   }
   
