ProyectoFinal se acomodaron y redimensionaron imagenes, se organizo el carrito, se cambio estilo de botones, se cambio el texto de Bienvenida

--- a/src/componentes/Checkout/Checkout.scss
+++ b/src/componentes/Checkout/Checkout.scss
@@ -11,7 +11,7 @@
 }
 
 .genera-orden {
-    background-color: #393646;
+    background-color: #312f39;
     color: white;
     padding: 15px;
     border-radius: 10px;
