--- a/src/componentes/Checkout/Form.scss
+++ b/src/componentes/Checkout/Form.scss
@@ -4,16 +4,16 @@ form {
   flex-direction: column;
   align-items: center;
   padding: 35px;
-  background-color: #393646;
   color: #ffa500;
   border-radius: 10px;
   max-width: 1200px;
   width: 1000px;
   align-content: center;
   justify-content: center;
-  margin-bottom: 27px;
   box-shadow: 3px 3px 6px #777777, -3px -3px 6px #ffffff;
-
+  gap: 4px;
+  background-color: #393646;
+  margin-top: 30px;
 }
 
 label {
@@ -56,11 +56,10 @@ button:hover {
   flex-direction: column;
   align-items: center;
   align-content: center;
-  padding: 35px;
+  padding: 55px;
   color: #393646;
   justify-content: center;
   width: auto;
-  margin-top: -0.51%;
 }
 
 .article-form h4 {
@@ -69,12 +68,15 @@ button:hover {
   border-radius: 10px;
   color: #ffffff;
   margin-bottom: 3%;
+  background-color: #393646;
+
 }
 
 .article-form h2 {
-  text-decoration: underline #ffa500;
   padding: 15px;
   border-radius: 10px;
-  color: #393646;
+  color: white;
+    background-color: #393646;
+
   margin-bottom: 3%;
 }
