Proyecto Final- Se agrego validacion en correo, se mejoro la visual de la interfaz con mediaquerys, se agrega pagina de error con su respectivo estilado, se validaron campos del formulario, se le agrego mejoras en el responsive hasta 768px, se incorporo SweetAlert2 en las dependencias, se mejoro la visual de README.md

--- a/src/componentes/Checkout/Checkout.scss
+++ b/src/componentes/Checkout/Checkout.scss
@@ -57,3 +57,23 @@ span {
     border: 1px solid #ffa500;
 
 }
+
+@media (max-width: 768px) {
+    .orden-fin {
+        display: flex;
+        height: auto;
+        margin-top: 30px;
+        gap: 30px;
+        padding: 24px;
+    }
+
+    .ident-pedido {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .buttons-fin {
+        width: 100%;
+        font-size: 0.9em;
+    }
+}
