--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -1,4 +1,3 @@
-
 #carritocontainer {
     padding: 10px;
     background-color: #393646;
@@ -12,7 +11,7 @@
     margin: 100px 200px;
     font-size: 1.05em;
     padding: 20px;
-    
+
 
 }
 
@@ -59,9 +58,10 @@
     justify-items: center;
     cursor: pointer;
 }
+
 .button-trash:hover {
-color: red;
-background-color: transparent;
+    color: red;
+    background-color: transparent;
 }
 
 .buttons {
@@ -117,45 +117,100 @@ background-color: transparent;
     padding: 10px;
 }
 
-//Diseño Carrito
-
 .carrito-table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0 10px;
     font-weight: bold;
+
+    th, td {
+        border-bottom: 1px solid #ddd;
+        padding: 8px;
+        background-color: white;
+        text-align: center;
+
+        &:first-child {
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+
+        &:last-child {
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+    }
+
+    th {
+        background-color: #393646;
+        color: white;
+    }
+}
+@media (max-width: 768px){
+    #carritocontainer {
+        margin: 20px 10px;
+        padding: 10px;
+    }
+
+    .carritoitem {
+        padding: 10px;
+        gap: 10px;
+    }
+
+    .carritoitem p, .cantidad, .totalprecio {
+        font-size: 0.8em;
+    }
+
+    .button-trash, .buttons {
+        width: auto; // O un ancho específico más pequeño si es necesario
+        padding: 5px;
+    }
+
+    .carritovacio {
+        margin: 20px 10px;
+        padding: 5px;
+    }
+
+    .carrito-table {
+        border-spacing: 0 5px;
+
+        th, td {
+            padding: 4px;
+            font-size: 0.8em;
+        }
+    }
 }
 
-.carrito-table th,
-.carrito-table td {
-    border-bottom: 1px solid #ddd;
-    padding: 8px;
-    background-color: white;
+@media (max-width: 1024px){
+    #carritocontainer {
+        margin: 20px 10px;
+        padding: 20px;
+    }
 
-}
+    .carritoitem {
+        padding: 10px;
+        gap: 10px;
+    }
 
-.carrito-table th {
-    background-color: #393646;
-    color: white;
-    text-align: left;
-    text-align: center;
-}
+    .carritoitem p, .cantidad, .totalprecio {
+        font-size: 0.8em;
+    }
 
-.carrito-table td:first-child {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    .button-trash, .buttons {
+        width: auto; // O un ancho específico más pequeño si es necesario
+        padding: 5px;
+    }
 
+    .carritovacio {
+        margin: 20px 10px;
+        padding: 5px;
+    }
 
-}
+    .carrito-table {
+        border-spacing: 0 5px;
 
-.carrito-table td:last-child {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-
-}
-
-.carrito-table tr:last-child {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-
+        th, td {
+            padding: 4px;
+            font-size: 0.8em;
+        }
+    }
 }
