--- a/src/componentes/Checkout/Form.scss
+++ b/src/componentes/Checkout/Form.scss
@@ -1,4 +1,3 @@
-/* Checkout.scss */
 form {
   display: flex;
   flex-direction: column;
@@ -79,4 +78,48 @@ button:hover {
     background-color: #393646;
 
   margin-bottom: 3%;
+}
+
+@media (max-width: 768px) {
+  form {
+  width: 100%;
+  padding: 20px;
+  box-shadow: 2px 2px 4px #777777, -2px -2px 4px #ffffff;
+  }
+
+  .button-d {
+    width: 100%;
+    font-size: 1em;
+}
+
+.article-form {
+    padding: 30px;
+}
+
+.article-form h4, .article-form h2 {
+    padding: 10px;
+    font-size: 0.9em;
+}
+}
+
+@media (max-width: 1024px) {
+  form {
+  width: 100%;
+  padding: 20px;
+  box-shadow: 2px 2px 4px #777777, -2px -2px 4px #ffffff;
+  }
+
+  .button-d {
+    width: 100%;
+    font-size: 1em;
+}
+
+.article-form {
+    padding: 30px;
+}
+
+.article-form h4, .article-form h2 {
+    padding: 10px;
+    font-size: 0.9em;
+}
 }
