--- a/src/componentes/NavBar/CartWidget.scss
+++ b/src/componentes/NavBar/CartWidget.scss
@@ -15,3 +15,17 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+
+@media (max-width: 768px) {
+    .cartwidget img {
+        width: 30px;
+        height: 30px;
+        margin-left: 30px;
+    }
+
+    .p-count {
+        font-size: 1em;
+        padding: 0 5px 0 5px;
+    }
+}
+
