--- a/src/componentes/Checkout/Checkout.scss
+++ b/src/componentes/Checkout/Checkout.scss
@@ -77,3 +77,9 @@ span {
         font-size: 0.9em;
     }
 }
+
+.toast {
+    background-color: #ffa500;
+    color: white;
+    font-size: 1.3em;
+}
